--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
 
 
-    <dialog id="modalContainer">
-        <h1>Aprendendo a construir um modal</h1>
+    <dialog id="modalController">
+        <div class="modal_container">
+            <h1>Aprendendo a construir um modal</h1>
 
-        <button id="closeModal">Fechar Modal</button>
+            <button id="closeModal">Fechar Modal</button>
+        </div>
+        
     </dialog>
 
     <script src="index.js"></script>
